--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,325 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/scss/bootstrap';
+
+$defaultColor: #548F68;
+$defaultColorDark: #3E7852;
+$defaultColorBright: #77B58C;
+
+$successColor: #5b8f54;
+$successColorDark: #47783e;
+$successColorBright: #80b577;
+
+$warningColor: #ea9033;
+$warningColorDark: #d47d25;
+$warningColorBright: #f5a656;
+
+$dangerColor: #b84b4b;
+$dangerColorDark: #9e3a3a;
+$dangerColorBright: #d16060;
+
+$whiteTextColor: #FAFAFA;
+$blackTextColor: #292929;
+
+$whiteBackground: #FAFAFA;
+$blackBackground: #383838;
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+    box-shadow: none;
+    list-style: none;
+}
+
+*::-webkit-scrollbar {
+    width: 0.5em;
+    background-color: #cfcfcf;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #808080;
+}
+
+body {
+    background-color: $whiteBackground;
+    font-family: Arial;
+}
+
+h1 {
+    font-size: 1.7rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.3rem;
+}
+
+h4 {
+    font-size: 1.1rem;
+}
+
+h5 {
+    font-size: 1rem;
+}
+
+h1, h2, h3, h4, h3 {
+    margin-bottom: 0.7rem;
+}
+
+input[type=text], textarea, select {
+    border-color: #9E9E9E !important;
+    background-color: #FBFBFB  !important;
+}
+
+input[type=text]:focus, textarea:focus, select:focus {
+    border-color: #353535 !important;
+    box-shadow: none !important;
+}   
+
+.input-group-text {
+    background: $whiteTextColor;
+    border-color: #9E9E9E;
+}
+
+form > .form-group > label, form > .form-group > .col > label {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 0.2rem;
+}
+
+.form-group {
+    margin-bottom: 0.7rem;
+}
+
+.form-control{
+    padding: 0.375rem 0.45rem;
+    margin-bottom: 0.6rem;
+    border-radius: 0.2em;
+}
+
+table {
+    border-radius: 5px;
+}
+
+.table-sm th, .table-sm td {
+    padding: 0.5rem 0.8rem;
+}
+
+.td-align-right {
+    text-align: right;
+}
+
+table > thead {
+    background-color: $defaultColorBright;
+    color: $whiteTextColor;
+    border: 0;
+}
+
+.table thead th {
+    border-bottom: 0;
+}
+
+tbody > tr > td {
+    border: 1px solid #ECECEC;
+    border-top: 0;
+}
+
+.table thead th {
+    vertical-align: middle;
+}
+
+.table th, .table td {
+    vertical-align: middle;
+}
+
+td > .btn-group > button {
+    margin-bottom: 0;
+}
+
+.table-settings {
+    margin-bottom: 0.7rem;
+}
+
+.table-settings > .input-group {
+    width: 200px;
+    float: right;
+}
+
+.pagination {
+    border-radius: 0.1rem;
+}
+
+.page-link, .page-link:hover {
+    color: $blackTextColor;
+}
+
+.page-link:focus {
+    box-shadow: none;
+}
+
+.page-item.active .page-link {
+    color: $whiteTextColor;
+    background-color: $defaultColorBright;
+    border-color: $defaultColorBright;
+}
+
+button{
+    color: $whiteTextColor;
+    margin-bottom: 0.7rem;
+}
+
+.btn-primary{
+    background-color: $defaultColor;
+    border-color: $defaultColor;
+}
+
+.btn-primary:hover{
+    background-color: $defaultColorBright;
+    border-color: $defaultColorBright;
+}
+
+.btn-primary:active, .btn-primary:not(:disabled):not(.disabled):active, 
+.btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active:focus {
+    background-color: $defaultColorDark;
+    border-color: $defaultColorDark;
+    box-shadow: none;
+}
+
+.btn-success{
+    background-color: $successColor;
+    border-color: $successColor;
+}
+
+.btn-success:hover{
+    background-color: $successColorBright;
+    border-color: $successColorBright;
+}
+
+.btn-success:active, .btn-success:not(:disabled):not(.disabled):active, 
+.btn-success:focus, .btn-success:not(:disabled):not(.disabled):active:focus {
+    background-color: $successColorDark;
+    border-color: $successColorDark;
+    box-shadow: none;
+}
+
+.btn-warning{
+    color: $whiteTextColor;
+    background-color: $warningColor;
+    border-color: $warningColor;
+}
+
+.btn-warning:hover{
+    color: $whiteTextColor;
+    background-color: $warningColorBright;
+    border-color: $warningColorBright;
+}
+
+.btn-warning:active, .btn-warning:not(:disabled):not(.disabled):active, 
+.btn-warning:focus, .btn-warning:not(:disabled):not(.disabled):active:focus {
+    color: $whiteTextColor;
+    background-color: $warningColorDark;
+    border-color: $warningColorDark;
+    box-shadow: none;
+}
+
+.btn-danger{
+    background-color: $dangerColor;
+    border-color: $dangerColor;
+}
+
+.btn-danger:hover{
+    background-color: $dangerColorBright;
+    border-color: $dangerColorBright;
+}
+
+.btn-danger:active, .btn-danger:not(:disabled):not(.disabled):active, 
+.btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active:focus {
+    background-color: $dangerColorDark;
+    border-color: $dangerColorDark;
+    box-shadow: none;
+}
+
+a {
+    color: $whiteTextColor;
+}
+
+a:hover {
+    color: $whiteTextColor;
+}
+
+.content {
+    padding: 5em 2em 2em 15em;
+}
+
+.content-header h1 {
+    display: block;
+}
+
+fa-icon {
+    margin-right: 5px;
+}
+
+.badge {
+    padding: 0.5em 1em;
+    font-size: 0.8em;
+}
+
+.badge-primary {
+    background-color: $defaultColor;
+}
+
+.card {
+    background-color: #FFF;
+    border: 1px solid #ECECEC;
+    padding: 12px 16px;
+    margin-bottom: 12px;
+
+    display: flex;
+}
+
+.card h1 {
+    font-size: 1.1rem;
+}
+
+.modal-content{
+    border: 0;
+}
+
+.modal-content .default-header{
+    background-color: $defaultColor;
+}
+
+.modal-content .danger-header{
+    background-color: $dangerColor;
+}
+
+.modal-content .close{
+    color: $whiteTextColor;
+    opacity: 1;
+}
+
+.modal-content .close:hover{
+    color: $whiteTextColor;
+    opacity: 0.7;
+}
+
+.modal-content .close:focus{
+    outline: none;
+}
+
+.modal-header{
+    color: $whiteTextColor;
+    padding: 0.2rem 0.6rem;
+}
+
+.modal-body{
+    padding: 0.8rem 0.6rem;
+}
+
+.modal-footer{
+    padding: 0.8rem 0.6rem;
+    border-top: 0;
+}
