[FEATURE] Página de login

--- a/src/app/components/_common/header/header.component.html
+++ b/src/app/components/_common/header/header.component.html
@@ -5,7 +5,7 @@
         </li>
         <div class="header-tab" *ngIf="showProfileTab">
             <a routerLink="/perfil"><fa-icon [icon]="faUserCog"></fa-icon> Meu perfil</a>
-            <a routerLink="/perfil"><fa-icon [icon]="faSignOutAlt"></fa-icon> Sair</a>
+            <a routerLink="/login"><fa-icon [icon]="faSignOutAlt"></fa-icon> Sair</a>
         </div>
         <li class="nav-item">
             <a (click)="toggleHeaderTabs(1)"><fa-icon [icon]="faBell"></fa-icon></a>
