--- a/src/app/components/_common/menu/menu.component.html
+++ b/src/app/components/_common/menu/menu.component.html
@@ -1,25 +1,25 @@
 <div class="side-menu">
     <ul class="menu">
         <li class="menu-item">
-            <a routerLink="/home"><fa-icon [icon]="faHome"></fa-icon> Home</a>
+            <a routerLink="/home" routerLinkActive="actived"><fa-icon [icon]="faHome"></fa-icon> Home</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/consultas"><fa-icon [icon]="faCalendarPlus"></fa-icon> Consultas</a>
+            <a routerLink="/consultas" routerLinkActive="actived"><fa-icon [icon]="faCalendarPlus"></fa-icon> Consultas</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/agenda"><fa-icon [icon]="faCalendarAlt"></fa-icon> Agenda</a>
+            <a routerLink="/agenda" routerLinkActive="actived"><fa-icon [icon]="faCalendarAlt"></fa-icon> Agenda</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/beneficiarios"><fa-icon [icon]="faHospitalUser"></fa-icon> Beneficiários</a>
+            <a routerLink="/beneficiarios" routerLinkActive="actived"><fa-icon [icon]="faHospitalUser"></fa-icon> Beneficiários</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/usuarios"><fa-icon [icon]="faUsers"></fa-icon> Usuários</a>
+            <a routerLink="/usuarios" routerLinkActive="actived"><fa-icon [icon]="faUsers"></fa-icon> Usuários</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/relatorios"><fa-icon [icon]="faFileInvoice"></fa-icon> Relatórios</a>
+            <a routerLink="/relatorios" routerLinkActive="actived"><fa-icon [icon]="faFileInvoice"></fa-icon> Relatórios</a>
         </li>
         <li class="menu-item">
-            <a routerLink="/layout"><fa-icon [icon]="faSwatchbook"></fa-icon> Layout</a>
+            <a routerLink="/layout" routerLinkActive="actived"><fa-icon [icon]="faSwatchbook"></fa-icon> Layout</a>
         </li>
     </ul>
 </div>
