--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="login-box">
+    <form (ngSubmit)="onSubmit()">
+        <h2>MedicSys</h2>
+        <div class="form-group">
+            <label>Login</label>
+            <input type="text" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label>Senha</label>
+            <input type="password" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <a routerLink="/">Esqueci minha senha</a>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary"><loading-icon *ngIf="loading"></loading-icon> Entrar</button>
+        </div>
+    </form>
+</div>
