--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,12 +69,12 @@ h1, h2, h3, h4, h3 {
     margin-bottom: 0.7rem;
 }
 
-input[type=text], textarea, select {
+input[type=text], input[type=password], textarea, select {
     border-color: #9E9E9E !important;
     background-color: #FBFBFB  !important;
 }
 
-input[type=text]:focus, textarea:focus, select:focus {
+input[type=text]:focus, input[type=password]:focus, textarea:focus, select:focus {
     border-color: #353535 !important;
     box-shadow: none !important;
 }   
