--- a/src/app/components/pages/profile/profile.component.html
+++ b/src/app/components/pages/profile/profile.component.html
@@ -11,7 +11,8 @@
             <div class="card">
                 <div class="profile-data">
                     <div class="profile-picture">
-                        <img src="https://scontent.fpoa1-1.fna.fbcdn.net/v/t31.0-1/p200x200/13317004_1029499327139400_7166677271785583382_o.jpg?_nc_cat=108&ccb=2&_nc_sid=7206a8&_nc_ohc=6QKnLXyd22AAX84u5tN&_nc_ht=scontent.fpoa1-1.fna&tp=6&oh=98910eee3f736858a435b5a64ea80abd&oe=5FCF532A" />
+                        
+                        <img src="https://scontent.fpoa1-1.fna.fbcdn.net/v/t31.0-8/13317004_1029499327139400_7166677271785583382_o.jpg?_nc_cat=108&ccb=2&_nc_sid=09cbfe&_nc_ohc=OP8B3gujlJsAX8ybZy2&_nc_ht=scontent.fpoa1-1.fna&oh=7102663dc1812bbd3ba5f68f980119b6&oe=5FF657BD" />
                         <div class="picture-overlay">
                             <span><fa-icon [icon]="faCamera"></fa-icon></span>
                         </div>
