--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,10 @@ form > .form-group > label, form > .form-group > .col > label {
     border-radius: 0.2em;
 }
 
+.form-actions > button {
+    margin-right: 10px;
+}
+
 table {
     border-radius: 5px;
 }
@@ -140,6 +144,11 @@ td > .btn-group > button {
 }
 
 .table-settings {
+    margin-bottom: 0.7rem;
+}
+
+.table-settings > button, .table-settings > a {
+    margin-right: 6px;
     margin-bottom: 0.7rem;
 }
 
