--- a/src/app/components/_common/header/header.component.scss
+++ b/src/app/components/_common/header/header.component.scss
@@ -26,6 +26,7 @@
 }
 
 .notification-count{
+    z-index: 2;
     background-color: $dangerColorBright;
     top: 0;
     width: 15px;
@@ -64,4 +65,27 @@
 .header-tab > a:hover {
     background-color: #ebebeb;
     text-decoration: none;
+}
+
+.new-notification {
+    z-index: 1;
+    animation: notify 0.3s forwards;
+}
+
+@keyframes notify {
+    20% {
+        transform: translateY(-6px);
+    }
+    40% {
+        transform: translateY(6px);
+    }
+    60% {
+        transform: translateY(-3px);
+    }
+    80% {
+        transform: translateY(3px);
+    }
+    100% {
+        transform: initial;
+    }
 }
